<resources>
    <string name="app_name">Animais</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="menu_principal_label">Menu Principal</string>
    <string name="sobre_fragmento_label">Sobre</string>
    <string name="sobre">Sobre</string>
    <string name="previous">Previous</string>

    <string name="Menu_fragment">Menu</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="Pesquisar">Pesquisar</string>
    <string name="Animais">Animais</string>
    <string name="Categorias">Categorias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Lista_Animais_Label">Animais</string>
    <string name="adicionar">Adicionar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="novo_animal_label">Novo Animal</string>

</resources>