<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MenuPrincipalFragmento">

    <fragment
        android:id="@+id/MenuPrincipalFragmento"
        android:name="com.example.animais.MenuPrincipalFragmento"
        android:label="@string/menu_principal_label"
        tools:layout="@layout/fragmento_menu_principal">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SobreFragmento" />
        <action
            android:id="@+id/action_MenuPrincipalFragmento_to_listaDeAnimais"
            app:destination="@id/listaDeAnimais" />
    </fragment>
    <fragment
        android:id="@+id/SobreFragmento"
        android:name="com.example.animais.SobreFragmento"
        android:label="@string/sobre_fragmento_label"
        tools:layout="@layout/fragmento_sobre">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/MenuPrincipalFragmento" />
        <action
            android:id="@+id/action_ListaLivrosFragment_to_novoLivroFragment"
            app:destination="@id/novoLivroFragment" />
    </fragment>
    <fragment
        android:id="@+id/novoLivroFragment"
        android:name="com.example.animais.NovoAnimalFragmento"
        android:label="@string/novo_animal_label"
        tools:layout="@layout/fragmento_novo_animal">
        <action
            android:id="@+id/action_novoLivroFragment_to_ListaLivrosFragment"
            app:destination="@id/listaDeAnimais" />
    </fragment>
    <fragment
        android:id="@+id/listaDeAnimais"
        android:name="com.example.animais.ListaDeAnimais"
        android:label="fragment_lista_de_animais"
        tools:layout="@layout/fragment_lista_de_animais" />
</navigation>